--- a/frontend/src/common/styles/layout.css
+++ b/frontend/src/common/styles/layout.css
@@ -1,10 +1,10 @@
 .site-layout-background {
     background: #fff;
-    padding: 24px 0;
+    padding: 0;
 }
 
 .top-wrapper {
-    margin-top: 48px;
+    margin-top: 24px;
 }
 
 .formify-logo {
