--- a/frontend/src/do/static/style.css
+++ b/frontend/src/do/static/style.css
@@ -49,6 +49,27 @@
     color: #1d1919;
     border-color: #1d1919;
 }
+.ant-radio-wrapper:focus {
+    text-decoration: underline;
+}
+.ant-radio-wrapper-checked span,
+.ant-checkbox-wrapper-checked span {
+    font-weight: bold;
+}
+.ant-radio-group {
+    font-size: inherit;
+}
+.ant-radio {
+    vertical-align: baseline;
+}
+.alpha-hotkey {
+    background: #666;
+    font-size: 0.85rem;
+    text-align: center;
+    color: white;
+    border-radius: 4px;
+    width: 20px;
+}
 #submit-btn {
     color: white;
     border-color: rgb(77, 94, 255);
