modify: disable user-select within header

--- a/frontend/src/common/styles/layout.css
+++ b/frontend/src/common/styles/layout.css
@@ -16,7 +16,9 @@
     width: 0;
     height: 0;
 }
-
+.header * {
+    user-select: none;
+}
 .site-layout-background {
     background: #fff;
     padding: 0;
